welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: type mismatch;
 found   : java.awt.Color
 required: String
  T(i)=getCouleurSol()
                    ^Array1:38: error: not found: value c
    c=T(i)
    ^Array1:39: error: not found: value c
    setCouleurBrosse(c)
                     ^